--- a/App/app/src/main/res/layout/task_item_view.xml
+++ b/App/app/src/main/res/layout/task_item_view.xml
@@ -20,7 +20,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:background="@color/back_elem"
-            android:id="@+id/dateOut"
+            android:id="@+id/taskNameText"
             android:textSize="20dp"
             android:layout_gravity="center"
             android:gravity="center"
