--- a/App/app/src/main/res/layout/activity_new_task.xml
+++ b/App/app/src/main/res/layout/activity_new_task.xml
@@ -53,6 +53,7 @@
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/taskName"
             android:hint="Название"
             android:textSize="20dp"
             android:textStyle="italic"
