--- a/App/app/src/main/res/layout/activity_plans.xml
+++ b/App/app/src/main/res/layout/activity_plans.xml
@@ -9,11 +9,136 @@
     android:scrollbars="vertical">
 
    <TextView
-       android:layout_width="wrap_content"
+       android:layout_width="match_parent"
        android:layout_height="wrap_content"
-       android:text="Plans Activity"
-       android:textSize="30dp"
-       android:layout_centerInParent="true"/>
+       android:id="@+id/textPlans"
+       android:text="Планы"
+       android:textSize="26dp"
+       android:gravity="center"
+       android:textColor="@color/black"
+       android:paddingVertical="10dp"/>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/scroll"
+        android:layout_below="@+id/textPlans">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="270dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/filterBtnView"
+                android:background="@drawable/filter_shape"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/filterText"
+                    android:text="Фильтр просмотра"
+                    android:textSize="22dp"
+                    android:textColor="@color/black"
+                    android:paddingStart="10dp"
+                    />
+                <ImageButton
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
+                    android:id="@+id/filterPlansBtn"
+                    android:src="@drawable/tick"
+                    android:scaleType="fitCenter"
+                    android:padding="5dp"
+                    android:backgroundTint="@color/bottom_menu"
+                    android:layout_marginLeft="10dp"
+                    android:visibility="gone"
+                    />
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="270dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/filterBtnView"
+                android:id="@+id/filterView"
+                android:visibility="gone"
+                android:background="@color/filter_bcg"
+                android:orientation="vertical"
+                android:paddingBottom="10dp">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/dateLL"
+                    android:orientation="horizontal">
+
+                    <CheckBox
+                        android:id="@+id/checkBoxDateF"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:checked="false"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/dateText"
+                        android:textSize="20dp"
+                        android:layout_gravity="center"
+                        android:gravity="center"
+                        android:textColor="@color/black"
+                        android:text="Дата: "/>
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/addDateFilter"
+                        android:inputType="date"
+                        android:background="@color/background_main"
+                        android:layout_marginHorizontal="10dp"
+                        android:textSize="20dp"
+                        android:hint="ДД.ММ.ГГГГ"
+                        />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/changesLL"
+                    android:orientation="horizontal">
+
+                    <CheckBox
+                        android:id="@+id/checkBoxChangesF"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:checked="false"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/changesText"
+                        android:textSize="20dp"
+                        android:layout_gravity="center"
+                        android:textColor="@color/black"
+                        android:text="По дате последних изменений" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/allPlansRecyclerView"
+                android:layout_below="@+id/filterView"
+                android:layout_marginTop="30dp" />
+
+
+        </RelativeLayout>
+
+    </ScrollView>
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
