--- a/App/app/src/main/res/menu/bottom_menu.xml
+++ b/App/app/src/main/res/menu/bottom_menu.xml
@@ -10,7 +10,7 @@
         android:icon="@drawable/plans"
         android:title=""/>
     <item
-        android:id="@+id/bottom_settings"
+        android:id="@+id/bottom_wheel"
         android:icon="@drawable/balance"
         android:title=""/>
     <item
