добавлен календарь при вводе дат

--- a/App/app/src/main/res/layout/activity_main.xml
+++ b/App/app/src/main/res/layout/activity_main.xml
@@ -192,6 +192,7 @@
         android:layout_marginBottom="70dp"
         android:layout_marginRight="10dp"
         android:layout_alignParentRight="true"
+        android:contentDescription=""
         />
 
 
