--- a/App/app/src/main/res/layout/activity_new_plan.xml
+++ b/App/app/src/main/res/layout/activity_new_plan.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_main"
-    tools:context=".NewTaskActivity">
+    tools:context=".NewPlanActivity">
+
+
 
     <ImageButton
         android:layout_width="60dp"
@@ -42,84 +44,121 @@
 
 
 
-
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/newPlanText"
-        android:layout_marginHorizontal="30dp"
-        android:orientation="vertical">
-
-        <EditText
+        android:id="@+id/scroll">
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/planName"
-            android:hint="Название"
-            android:textSize="20dp"
-            android:textStyle="italic"
-            android:maxLength="30"/>
+            android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="30dp"
+                android:orientation="vertical">
 
-            <ImageButton
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/time_for_task"
-                android:scaleType="centerCrop"
-                android:background="@color/background_main"
-                android:layout_marginVertical="10dp"
-                />
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:id="@+id/datePlanFrom"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:textStyle="italic"
-                android:inputType="date"
-                android:hint="От дд.мм.гггг"
-                android:layout_marginLeft="10dp"/>
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/planName"
+                    android:hint="Название"
+                    android:textSize="20dp"
+                    android:textStyle="italic"
+                    android:maxLength="30"/>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginLeft="40dp">
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:id="@+id/datePlanTo"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:textStyle="italic"
-                android:inputType="date"
-                android:hint="До дд.мм.гггг"
-                android:layout_marginLeft="10dp"/>
-
-        </LinearLayout>
+                    <ImageButton
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:src="@drawable/time_for_task"
+                        android:scaleType="centerCrop"
+                        android:background="@color/background_main"
+                        android:layout_marginVertical="10dp"
+                        />
+                    <EditText
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:id="@+id/datePlanFrom"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:textStyle="italic"
+                        android:inputType="date"
+                        android:hint="От дд.мм.гггг"
+                        android:layout_marginLeft="10dp"/>
 
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/decrPlanEditText"
-            android:hint="Описание"
-            android:inputType="textMultiLine"
-            android:lines="5"
-            android:maxLines="10"
-            android:gravity="start"
-            android:padding="10dp"
-            android:background="@drawable/image_btn_style"
-            android:textStyle="italic"
-            android:layout_marginVertical="30dp"
-            />
-    </LinearLayout>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginLeft="40dp">
+                    <EditText
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:id="@+id/datePlanTo"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:textStyle="italic"
+                        android:inputType="date"
+                        android:hint="До дд.мм.гггг"
+                        android:layout_marginLeft="10dp"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/calendarLL"
+                    android:orientation="vertical"
+                    android:background="@drawable/image_btn_style"
+                    android:visibility="gone">
+                        <CalendarView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/calendarView"
+                            />
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/calendarBtn"
+                            android:background="@drawable/calendar_btn_style"
+                            android:text="Выбрать"
+                            android:textSize="20dp"
+                            android:layout_gravity="center"
+                            android:textColor="@color/black"
+                            android:textAlignment="center"
+                            android:paddingVertical="5dp"
+                            />
+                </LinearLayout>
+
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/decrPlanEditText"
+                    android:hint="Описание"
+                    android:inputType="textMultiLine"
+                    android:lines="5"
+                    android:maxLines="10"
+                    android:gravity="start"
+                    android:padding="10dp"
+                    android:background="@drawable/image_btn_style"
+                    android:textStyle="italic"
+                    android:layout_marginVertical="30dp"
+                    />
+            </LinearLayout>
+
+        </RelativeLayout>
+    </ScrollView>
 
 
 </RelativeLayout>
