--- a/App/app/src/main/res/layout/activity_new_task.xml
+++ b/App/app/src/main/res/layout/activity_new_task.xml
@@ -41,180 +41,214 @@
         />
 
 
-
-
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/newTaskText"
-        android:layout_marginHorizontal="30dp"
-        android:orientation="vertical">
-
-        <EditText
+        android:id="@+id/scroll">
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/taskName"
-            android:hint="Название"
-            android:textSize="20dp"
-            android:textStyle="italic"
-            android:maxLength="30"/>
+            android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageButton
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/score"
-                android:scaleType="centerCrop"
-                android:background="@color/background_main"
-                android:layout_marginVertical="10dp"
-                />
-            <EditText
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:id="@+id/scoreEditText"
-                android:layout_gravity="center"
-                android:textStyle="italic"
-                android:inputType="number"
-                android:hint="Оценка"
-                android:layout_marginLeft="10dp"/>
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="30dp"
+                android:orientation="vertical">
 
-        </LinearLayout>
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/taskName"
+                    android:hint="Название"
+                    android:textSize="20dp"
+                    android:textStyle="italic"
+                    android:maxLength="30"/>
 
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+                    <ImageButton
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:src="@drawable/score"
+                        android:scaleType="centerCrop"
+                        android:background="@color/background_main"
+                        android:layout_marginVertical="10dp"
+                        />
+                    <EditText
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:id="@+id/scoreEditText"
+                        android:layout_gravity="center"
+                        android:textStyle="italic"
+                        android:inputType="number"
+                        android:hint="Оценка"
+                        android:layout_marginLeft="10dp"/>
 
-            <ImageButton
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/category"
-                android:scaleType="centerCrop"
-                android:background="@color/background_main"
-                android:layout_marginVertical="10dp"
-                />
-            <Spinner
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:id="@+id/ctgSpinner"
-                android:layout_gravity="center"
-                android:layout_marginHorizontal="10dp" />
-
-        </LinearLayout>
-
-
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageButton
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/time_for_task"
-                android:scaleType="centerCrop"
-                android:background="@color/background_main"
-                android:layout_marginVertical="10dp"
-                />
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:id="@+id/dateTimeTaskFromDate"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:textStyle="italic"
-                android:inputType="date"
-                android:hint="От (дата)"
-                android:layout_marginLeft="10dp"/>
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:id="@+id/dateTimeTaskFromTime"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:textStyle="italic"
-                android:inputType="time"
-                android:hint="От (время)"
-                android:layout_marginLeft="10dp"/>
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginLeft="40dp">
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:id="@+id/dateTimeTaskToDate"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:textStyle="italic"
-                android:inputType="date"
-                android:hint="До (дата)"
-                android:layout_marginLeft="10dp"/>
-            <EditText
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:id="@+id/dateTimeTaskToTime"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:textStyle="italic"
-                android:inputType="time"
-                android:hint="До (время)"
-                android:layout_marginLeft="10dp"/>
-        </LinearLayout>
+                </LinearLayout>
 
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
-            <ImageButton
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:src="@drawable/repeat"
-                android:scaleType="centerCrop"
-                android:background="@color/background_main"
-                android:layout_marginVertical="10dp"
-                />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="40dp"
-                android:id="@+id/repeatTaskText"
-                android:layout_gravity="center"
-                android:gravity="center_vertical"
-                android:textSize="18dp"
-                android:textStyle="italic"
-                android:text="Не повторяется"
-                android:layout_marginLeft="10dp"
-                android:textColor="@color/black"/>
+                    <ImageButton
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:src="@drawable/category"
+                        android:scaleType="centerCrop"
+                        android:background="@color/background_main"
+                        android:layout_marginVertical="10dp"
+                        />
+                    <Spinner
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:id="@+id/ctgSpinner"
+                        android:layout_gravity="center"
+                        android:layout_marginHorizontal="10dp" />
 
-        </LinearLayout>
+                </LinearLayout>
 
-        <EditText
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/decrTaskEditText"
-            android:hint="Описание"
-            android:inputType="textMultiLine"
-            android:lines="5"
-            android:maxLines="10"
-            android:gravity="start"
-            android:padding="10dp"
-            android:background="@drawable/image_btn_style"
-            android:textStyle="italic"
-            android:layout_marginVertical="30dp"
-            />
-    </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <ImageButton
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:src="@drawable/time_for_task"
+                        android:scaleType="centerCrop"
+                        android:background="@color/background_main"
+                        android:layout_marginVertical="10dp"
+                        />
+                    <EditText
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:id="@+id/dateTimeTaskFromDate"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:textStyle="italic"
+                        android:inputType="date"
+                        android:hint="От (дата)"
+                        android:layout_marginLeft="10dp"/>
+                    <EditText
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:id="@+id/dateTimeTaskFromTime"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:textStyle="italic"
+                        android:inputType="time"
+                        android:hint="От (время)"
+                        android:layout_marginLeft="10dp"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginLeft="40dp">
+                    <EditText
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:id="@+id/dateTimeTaskToDate"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:textStyle="italic"
+                        android:inputType="date"
+                        android:hint="До (дата)"
+                        android:layout_marginLeft="10dp"/>
+                    <EditText
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:id="@+id/dateTimeTaskToTime"
+                        android:layout_gravity="center"
+                        android:layout_weight="1"
+                        android:textStyle="italic"
+                        android:inputType="time"
+                        android:hint="До (время)"
+                        android:layout_marginLeft="10dp"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/calendarLL"
+                    android:orientation="vertical"
+                    android:background="@drawable/image_btn_style"
+                    android:visibility="gone">
+                    <CalendarView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/calendarView"
+                        />
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/calendarBtn"
+                        android:background="@drawable/calendar_btn_style"
+                        android:text="Выбрать"
+                        android:textSize="20dp"
+                        android:layout_gravity="center"
+                        android:textColor="@color/black"
+                        android:textAlignment="center"
+                        android:paddingVertical="5dp"
+                        />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <ImageButton
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:src="@drawable/repeat"
+                        android:scaleType="centerCrop"
+                        android:background="@color/background_main"
+                        android:layout_marginVertical="10dp"
+                        />
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:id="@+id/repeatTaskText"
+                        android:layout_gravity="center"
+                        android:gravity="center_vertical"
+                        android:textSize="18dp"
+                        android:textStyle="italic"
+                        android:text="Не повторяется"
+                        android:layout_marginLeft="10dp"
+                        android:textColor="@color/black"/>
+
+                </LinearLayout>
+
+                <EditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/decrTaskEditText"
+                    android:hint="Описание"
+                    android:inputType="textMultiLine"
+                    android:lines="5"
+                    android:maxLines="10"
+                    android:gravity="start"
+                    android:padding="10dp"
+                    android:background="@drawable/image_btn_style"
+                    android:textStyle="italic"
+                    android:layout_marginVertical="30dp"
+                    />
+            </LinearLayout>
+        </RelativeLayout>
+    </ScrollView>
 
 
 </RelativeLayout>
